# enchanted-view

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml  release.yml
assets/: sample_image.jfif
src/: button.rs  center_container.rs  checkerboard_pattern.rs  color_analyzer.rs  color_name.rs  drop_down_menu.rs  egui_extensions.rs  file_dialog.rs  image_button.rs  image_directory.rs  key_value_match.rs  main.rs  pan_zoom_image.rs  select.rs  settings.rs  switch.rs  theme.rs  utilities.rs
src/widgets/: button.rs  center_container.rs  combo_box.rs  hotkey.rs  image_button.rs  mod.rs  path_picker.rs  switch.rs
