[package]
name = "enchanted-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.19"
chrono = "0.4.31"
dark-light = "1.0.0"
eframe = {version="0.23.0", features = ["persistence"]}
egui = {version="0.23.0", features = ["persistence", "serde"]}
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
image = { version = "0.24", features = [
  "jpeg",
  "png",
] }
notify = "6.1.1"
open = "5.0.0"
rfd = "0.12.1"
serde = "1.0.189"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
